# eip-specs-agent

./: README.md  pyproject.toml
app/: app.py
eval/: data_gen.py  evaluate.py
